--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 			}
     	
     	ccmonitor.default.install({
+    		getCoordinate:false,
     		apiBaseUrl:'',//接口根地址
     		api:{
     			event:'/d',//事件监控接口
